@@ -162,4 +162,10 @@ Failed: POSIX code 4: ? * + invalid at offset 1000001
 ** Ignored with POSIX interface: offset
 Matched with REG_NOSUB
 
+/(?=(a\K))/
+    a
+Start of matched string is beyond its end - displaying from end to start.
+ 0: a
+ 1: a
+     
 # End of testdata/testinput18
